force-app/main/default/objects/Expense_Request__c/Expense_Request__c.object-meta.xml
<CustomObject>
    <description>This object stores all expense request of users.</description>
    <label>Expense Request</label>
    <nameField>
        <displayFormat>ER-{0}</displayFormat>
        <label>Expense Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>