force-app/main/default/objects/Expense_Request__c/fields/Approver_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email_Address__c</fullName>
    <description>This field contains email id of Approver this expense request.</description>
    <formula>CreatedBy.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Email Address</label>
    <type>Text</type>
</CustomField>