force-app/main/default/objects/Expense_Request__c/fields/Approver_ID__c.field-meta.xml
<CustomField>
    <fullName>Approver_ID__c</fullName>
    <formula>CreatedBy.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver ID</label>
    <type>Text</type>
</CustomField>