force-app/main/default/objects/Expense_Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
                <default>true</default>
                <label>Travel</label>
            </value>
            <value>
                <fullName>Client Visit</fullName>
            </value>
            <value>
                <fullName>Stationary</fullName>
            </value>
            <value>
                <fullName>Medical Expenses</fullName>
            </value>
            <value>
                <fullName>WFH Support</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>