force-app/main/default/objects/Expense_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field stores status of each expense request. If the status is &quot;New&quot;, it means expense request is not submitted for approval and is open. If the status is &quot;Submitted&quot;, it means expense request is submitted for approval and is pending for approval from manager. If the status is &quot;Approved, it means the expense request is approved by manager. If the status is &quot;Rejected&quot;, it means the expense request is rejected by manager.</description>
    <inlineHelpText>This field stores status of each expense request. If the status is &quot;New&quot;, it means expense request is not submitted for approval and is open. If the status is &quot;Submitted&quot;, it means expense request is submitted for approval and is pending for approval from manager. If the status is &quot;Approved, it means the expense request is approved by manager. If the status is &quot;Rejected&quot;, it means the expense request is rejected by manager.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>