force-app/main/default/objects/Expense_Request__c/fields/UserManagerID__c.field-meta.xml
<CustomField>
    <fullName>UserManagerID__c</fullName>
    <formula>CreatedBy.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Manager ID</label>
    <type>Text</type>
</CustomField>